# waveforms-rs

./: Cargo.toml  README.md
examples/: basic.rs  plot.rs
src/: lib.rs  waveforms.rs
