[package]
name = "waveforms-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"], default-features = false}


[dev-dependencies]
textplots = "0.8.4"
rgb = "0.8.37"
